--- a/app/src/main/res/layout/recipestep_detail.xml
+++ b/app/src/main/res/layout/recipestep_detail.xml
@@ -3,31 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_gravity="center">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/video_player_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:layout_marginTop="16dp" />
-
-    <TextView
-        android:id="@+id/short_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        tools:text="Short Description"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:layout_weight="2" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:layout_weight="1"
-        android:layout_margin="@dimen/text_margin"
-        tools:text="This is a long description of the recipe step"
-        android:textAppearance="?attr/textAppearanceListItem" />
+        android:textAppearance="?attr/textAppearanceListItem"
+        tools:text="This is a long description of the recipe step" />
 
 </LinearLayout>
